--- a/Rotacio0/res/layout-land/fragment_main.xml
+++ b/Rotacio0/res/layout-land/fragment_main.xml
@@ -73,17 +73,20 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="20"
-            android:orientation="vertical" >
-
+            android:orientation="vertical"
+            android:weightSum="120" >
+          
             <RatingBar
                 android:id="@+id/ratingBar1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_weight="40" />
 
             <RadioGroup
                 android:id="@+id/radioGroup1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content"
+                android:layout_weight="40" >
 
                 <RadioButton
                     android:id="@+id/radio0"
@@ -98,6 +101,14 @@
                     android:layout_height="wrap_content"
                     android:text="Femella" />
             </RadioGroup>
+
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_weight="40"
+                android:text="Enviar Dades" />
 
         </LinearLayout>
     
