--- a/Rotacio0/res/layout-land/fragment_main.xml
+++ b/Rotacio0/res/layout-land/fragment_main.xml
@@ -7,30 +7,28 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="dam.pmdm.rotacio0.MainActivity$PlaceholderFragment" >
+    tools:context="dam.pmdm.rotacio0.MainActivity$PlaceholderFragment" 
+    android:weightSum="120" >
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_weight="0"
         android:gravity="center_horizontal"
         android:text="@string/titol" />
 
     <LinearLayout
         android:id="@+id/linearLayout1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp"
-        android:orientation="horizontal" 
-        android:weightSum="120">
+        android:gravity="center"
+        android:orientation="horizontal" >
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="30"
             android:orientation="vertical" >
 
             <TextView
@@ -45,7 +43,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName" >
+
+                <requestFocus />
+            </EditText>
 
             <TextView
                 android:id="@+id/TextView01"
@@ -60,33 +61,28 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="phone" />
-
-            <Switch
-                android:id="@+id/switch1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Carnet de conduir?" />
-
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="20"
+            android:layout_width="268dp"
+            android:layout_height="159dp"
+            android:layout_margin="20dp"
             android:orientation="vertical"
             android:weightSum="120" >
-          
-            <RatingBar
-                android:id="@+id/ratingBar1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="40" />
 
             <RadioGroup
                 android:id="@+id/radioGroup1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="40" >
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="10dp"
+                android:orientation="horizontal" >
+
+                <RadioButton
+                    android:id="@+id/radio1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Femella" />
 
                 <RadioButton
                     android:id="@+id/radio0"
@@ -94,24 +90,31 @@
                     android:layout_height="wrap_content"
                     android:checked="true"
                     android:text="Mascle" />
-
-                <RadioButton
-                    android:id="@+id/radio1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Femella" />
             </RadioGroup>
 
-            <Button
-                android:id="@+id/button1"
+            <Switch
+                android:id="@+id/switch1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_weight="40"
-                android:text="Enviar Dades" />
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="10dp"
+                android:text="Carnet de conduir?" />
+
+            <RatingBar
+                android:id="@+id/ratingBar1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal" />
 
         </LinearLayout>
-    
+
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Enviar Dades" />
 
 </LinearLayout>
