--- a/Rotacio0/res/layout/fragment_main.xml
+++ b/Rotacio0/res/layout/fragment_main.xml
@@ -1,17 +1,22 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
+    android:gravity="bottom"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:weightSum="120"
     tools:context="dam.pmdm.rotacio0.MainActivity$PlaceholderFragment" >
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="15"
         android:gravity="center_horizontal"
         android:text="@string/titol" />
 
@@ -21,7 +26,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
         android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="44dp"
+        android:layout_weight="60"
         android:orientation="vertical" >
 
         <TextView
@@ -35,6 +42,7 @@
             android:id="@+id/editText1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:ems="10"
             android:inputType="textPersonName" />
 
@@ -51,6 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/linearLayout1"
             android:layout_below="@+id/linearLayout1"
+            android:layout_margin="20dp"
             android:ems="10"
             android:inputType="phone" >
 
@@ -60,7 +69,10 @@
         <RadioGroup
             android:id="@+id/radioGroup1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="20dp"
+            android:orientation="horizontal" >
 
             <RadioButton
                 android:id="@+id/radio0"
@@ -76,22 +88,33 @@
                 android:text="Femella" />
 
         </RadioGroup>
-        
-		<Switch
-        	android:id="@+id/switch1"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:text="Carnet de conduir?" />
     
     </LinearLayout>
 
-   
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="15"
+        android:text="Carnet de conduir?" />
 
     <RatingBar
         android:id="@+id/ratingBar1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout1"
-        android:layout_centerHorizontal="true" />
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="20"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:visibility="visible" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom"
+        android:layout_weight="20"
+        android:text="Button" />
+
+</LinearLayout>
