--- a/Rotacio0/res/layout-land/fragment_main.xml
+++ b/Rotacio0/res/layout-land/fragment_main.xml
@@ -80,7 +80,8 @@
                 android:id="@+id/ratingBar1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="40" />
+                android:layout_weight="40"
+                android:rating="3" />
 
             <RadioGroup
                 android:id="@+id/radioGroup1"
