--- a/Rotacio0/res/layout/fragment_main.xml
+++ b/Rotacio0/res/layout/fragment_main.xml
@@ -85,13 +85,21 @@
     
     </LinearLayout>
 
-   
-
     <RatingBar
         android:id="@+id/ratingBar1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/linearLayout1"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:rating="3" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ratingBar1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="14dp"
+        android:text="Enviar Dades" />
 
 </RelativeLayout>
