--- a/LogiPop/res/layout/activity_main.xml
+++ b/LogiPop/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#000000"
     android:orientation="vertical"
-    android:padding="50dp"
+    android:padding="25dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -38,9 +38,8 @@
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="80"
+        android:layout_height="0dp"
+        android:layout_weight="110"
         android:background="#FFFFFF"
         android:contentDescription="@string/pajarito"
         android:scaleType="fitXY"
