Signed-off-by: areikusu <aleix.casanova@gmail.com>

--- a/Intenciones/res/layout-land/activity_resultados.xml
+++ b/Intenciones/res/layout-land/activity_resultados.xml
@@ -93,7 +93,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="20"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/femella" />
 
             <Button
                 android:id="@+id/button1"
