--- a/Intenciones/res/layout/activity_resultados.xml
+++ b/Intenciones/res/layout/activity_resultados.xml
@@ -87,27 +87,26 @@
 
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/imageView1"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="top"
             android:layout_weight="50"
-            android:src="@drawable/ic_launcher" />
+            android:orientation="vertical" >
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="50"
+                android:src="@drawable/mascle" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="50"
-        android:orientation="vertical" >
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@+string/fin" />
 
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@+string/fin" />
+        </LinearLayout>
 
     </LinearLayout>
 
