--- a/Intenciones/res/layout/activity_resultados.xml
+++ b/Intenciones/res/layout/activity_resultados.xml
@@ -97,6 +97,7 @@
                 android:id="@+id/imageView1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="top"
                 android:layout_weight="50"
                 android:src="@drawable/mascle" />
 
